# adw-user-colors

./: Cargo.toml  README.md  justfile
adw-user-colors-bin/: Cargo.toml
adw-user-colors-bin/src/: main.rs
adw-user-colors-editor/: Cargo.toml
adw-user-colors-editor/data/: gay.ash.AdwaitaUserColorsEditor.desktop  gay.ash.AdwaitaUserColorsEditor.xml
adw-user-colors-editor/data/resources/: resources.gresource.xml
adw-user-colors-editor/src/: main.rs  util.rs
adw-user-colors-editor/src/components/: mod.rs
adw-user-colors-editor/src/components/app/: imp.rs  mod.rs
adw-user-colors-editor/src/components/color_overrides_editor/: imp.rs  mod.rs
adw-user-colors-editor/src/components/image_chooser_button/: imp.rs  mod.rs
adw-user-colors-editor/src/components/theme_chooser_button/: imp.rs  mod.rs
adw-user-colors-lib/: Cargo.toml
adw-user-colors-lib/src/: colors.rs  config.rs  dark_default.ron  lib.rs  light_default.ron
debian/: changelog  control  copyright  rules
resources/: adw-user-colors.service
