[package]
name = "adw-user-colors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adw-user-colors"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
user-colors = { path = "../adw-user-colors-lib", package = "adw-user-colors-lib", default-features = false}