[package]
name = "adw-user-colors-lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = { version = "0.6", features = ["serializing"] }
serde = "1.0.136"
ron = "0.7"
toml = "0.5.9"
hex = "0.4.3"
log = "0.4"
pretty_env_logger = "0.4"
xdg = "2.4.0"
anyhow = "1.0.57"
adw = {version = "0.1.1", package = "libadwaita" }
cosmic-theme = { path = "../../cosmic-theme" }
